# flip

./: .gitignore  AGENTS.md  README.md  README.zh.md  README_en.md  pyproject.toml
.github/workflows/: release-from-version.yml  update-homebrew-tap.yml
Formula/: flip.rb
decks/example/: manifest.toml  tiku.json
docs/: deck-manifest.md  import.md  schema.md
scripts/: build_formula.sh
skills/flip-deck-init/: SKILL.md
skills/flip-deck-maintain/: SKILL.md
skills/flip-deck-maintain/agents/: openai.yaml
src/flip/: __init__.py  _toml.py  backends.py  bootstrap.py  cli.py  config.py  deck.py  doctor.py  engine.py  engine_loop.py  explain.py  importers.py  merge.py  repair.py  store.py  translate.py
src/flip/bundled_decks/se-template/: CHANGELOG.md  metadata.toml  tiku.json
src/flip/tui/: __init__.py  _keys_unix.py  _keys_windows.py  keys.py  render.py
tests/: conftest.py  test_backends.py  test_bootstrap.py  test_chapter_selector.py  test_cli_deck_update.py  test_cli_history.py  test_cli_import.py  test_cli_merge.py  test_cli_repair.py  test_cli_version.py  test_config.py  test_deck.py  test_engine_loop.py  test_filename.py  test_filter.py  test_history.py  test_importers.py  test_keys_backend.py  test_merge.py  test_parse_answer.py  test_question_key.py  test_render.py
