[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flip"
version = "0.3.0"
description = "Terminal quiz trainer — a deck-agnostic template engine."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "flip" }]
dependencies = [
    "typer>=0.12.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
flip = "flip.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flip = ["bundled_decks/se-template/tiku.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
